Modified the git ignore - Patrick

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-Current_Unity_Build/PuP_Unity_Project/UserSettings/EditorUserSettings.asset
-Current_Unity_Build/PuP_Unity_Project/UserSettings/EditorUserSettings.asset
-Current_Unity_Build/PuP_Unity_Project/UserSettings/EditorUserSettings.asset
+Cracked Crown\UserSettings\EditorUserSettings.asset
